# verified-substreams

./: .gitignore copy  README.md
PrimaryExample/: substreams.yaml
PrimaryExample/app/src/: App.tsx
backend/: .gitignore  package-lock.json  package.json
backend/src/: index.js
backend/utils/: config.js  helpers.js  substream.js  winstonLogs.js
examples/margin/: .gitignore  babel.config.json
examples/margin/public/: margin_pool.spkg
examples/margin/src/: App.js  index.css
examples/primary/public/: index.html  primary_pool.proto  primary_pool.spkg
examples/primary/src/: App.js
examples/secondary/: config-overrides.js  package-lock.json  package.json
marginpool_factory/: .gitignore  Cargo.toml  README.md  build.rs  marginpool-factory-v0.1.0.spkg  substreams.yaml
marginpool_factory/abi/: margin_pool_contract.abi.json
marginpool_factory/proto/: contract.proto
marginpool_factory/src/: lib.rs
modules/PrimaryPool/: Cargo.toml  schema.sql  substreams.yaml
modules/PrimaryPool/src/: db_out.rs  lib.rs
modules/SecondaryPool/: substreams.yaml
primarypool_factory/: Cargo.toml  README.md  build.rs  primarypool-factory-v0.1.0.spkg  substreams.yaml
primarypool_factory/abi/: primary_pool_contract.abi.json  primarypool_factory_contract.abi.json
primarypool_factory/src/: lib.rs
secondarypool_factory/: Cargo.toml  README.md  build.rs  secondarypool-factory-v0.1.0.spkg  substreams.yaml
secondarypool_factory/abi/: secondary_pool_contract.abi.json  secondarypool_factory_contract.abi.json
secondarypool_factory/src/: lib.rs
(+27 files in other folders)
