[package]
name = "substreams-primary-pool"
version = "0.1.0"
description = "Substreams for pricing and subscriptions data from the Verified Network"
edition = "2021"
authors = ["Kallol Borah"]
repository = "https://github.com/verified-network/verified-substreams"
license = "MIT"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
hex-literal = "0.3.4"
num-bigint = "0.4"
prost = "0.11"
prost-types = "^0.11.0"
# Use latest from https://crates.io/crates/substreams
substreams = "0.5.6"
# Use latest from https://crates.io/crates/substreams-ethereum
substreams-ethereum = "0.9.1"
substreams-sink-kv = "0.1.1"
substreams-database-change = "1.3.1"

# Required so that ethabi > ethereum-types build correctly under wasm32-unknown-unknown
[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2", features = ["custom"] }

[build-dependencies]
anyhow = "1"
substreams-ethereum = "0.9"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"